# evalforge

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  evalforge_report_00302d5c.html  evalforge_report_0413d2df.md  evalforge_report_064546c2.md  evalforge_report_13f7ab6b.json  evalforge_report_1bbfd15e.json  evalforge_report_2d15cbce.md  evalforge_report_324bd0c3.md  evalforge_report_3d214923.html  evalforge_report_3db468b3.md  evalforge_report_3fe7ae9e.json  evalforge_report_40ba5045.md  evalforge_report_45235d0c.json  evalforge_report_51c958d5.json  evalforge_report_678a24cd.json  evalforge_report_88214a6a.md  evalforge_report_8ba255df.html  evalforge_report_90329baf.html  evalforge_report_95079199.html  evalforge_report_ab53a9c7.md  evalforge_report_af4f5f6e.html  evalforge_report_b0a9800a.html  evalforge_report_b9600e05.html  evalforge_report_c4ccc3dd.html  evalforge_report_c619e3cb.md  evalforge_report_cdb45f0e.json  evalforge_report_dd8bde66.json  evalforge_report_fed58847.json  (+2 more)
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  getting_started.md  integrations.md
evalforge/: __init__.py  sdk.py
evalforge/benchmarks/: registry.py
evalforge/cli/: export_cmd.py  list_cmd.py  main.py  run.py
evalforge/core/: engine.py  grading.py  harness.py  metrics.py  session.py
evalforge/dashboard/: app.py  theme.py
evalforge/diagnostics/: analyzer.py  heuristics.py  insights.py
evalforge/models/: __init__.py  diagnostics.py  evaluation.py  metrics.py  provider.py  run.py  trace.py
evalforge/providers/: anthropic_provider.py  (+9 more)
examples/: custom_benchmark.py  quickstart.py
spaces/: README.md  app.py
tests/: test_cli.py  test_diagnostics.py  test_engine.py  test_grading.py  test_metrics.py  test_models.py  test_pass_at_k.py  test_providers.py  test_providers_advanced.py  test_remaining.py  test_replay.py  test_safety.py  test_sdk.py  test_storage.py
(+23 files in other folders)
