[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "evalforge"
version = "1.0.0"
description = "Agent Evaluation & Benchmarking Platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "EvalForge Contributors"}]

keywords = ["agent", "evaluation", "benchmark", "llm", "testing", "anthropic", "claude"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "gradio>=5.0",
    "fastapi>=0.110",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "httpx>=0.26",
    "plotly>=5.18",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "pre-commit>=3.0",
    "bandit>=1.7",
]
all = ["evalforge[dev]"]

[project.urls]
Homepage = "https://github.com/shubhmartin107-web/evalforge"
Repository = "https://github.com/shubhmartin107-web/evalforge"
Documentation = "https://github.com/shubhmartin107-web/evalforge/tree/main/docs"
Issues = "https://github.com/shubhmartin107-web/evalforge/issues"

[project.scripts]
evalforge = "evalforge.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["evalforge"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_return_any = true
strict_equality = true
